--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
+          <a href="https://nimbuscorp.ca/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
 
           <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
@@ -27,8 +27,8 @@
           </div>
 
           <nav>
-            <a href="https://nimbuscorp.ca">Home</a>
-            <a href="{{ site.baseurl }}/">Articles</a>
+            <a href="{{ site.baseurl }}/">Home</a>
+           <!-- <a href="{{ site.baseurl }}/">Articles</a> -->
           </nav>
         </header>
       </div>
