--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
           </div>
 
           <nav>
-            <!-- <a href="{{ site.baseurl }}/">Articles</a> -->
+            <a href="https://www.nimbuscorp.ca">Home</a>
            <!-- <a href="{{ site.baseurl }}/">Articles</a> -->
           </nav>
         </header>
