--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Case Studies</title>
+    <title>Nimbus Corp  | Case Studies</title>
 
     {% include meta.html %}
 
@@ -20,14 +20,10 @@
       <div class="container">
         <header class="masthead clearfix">
           <a href="https://nimbuscorp.ca/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
-          <br>
-          <br>
-          <br>
           <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             <p class="site-description">{{ site.description }}</p>
           </div>
-        
           <nav>
             <a href="https://www.nimbuscorp.ca">Home</a>
            <!-- <a href="{{ site.baseurl }}/">Articles</a> -->
