--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,8 @@
             <p class="site-description">{{ site.description }}</p>
           </div>
           <nav>
-            <a href="https://www.nimbuscorp.ca">Home</a>
-           <!-- <a href="{{ site.baseurl }}/">Articles</a> -->
+            <!-- <a href="https://www.nimbuscorp.ca">Home</a> -->
+           <a href="{{ site.baseurl }}/">Articles</a>
           </nav>
    
         </header>
